Kubernetes/clienttls-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alicesrabbit-server-tls
  labels:
    app: alicesrabbit-server-tls
  namespace: alicesrabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alicesrabbit-server-tls
  template:
    metadata:
      labels:
        app: alicesrabbit-server-tls
    spec:
      containers:
      - name: alicesrabbit-server-tls
        image: 162.19.66.30:7000/alicesrabbit_server:kube-tls
        ports:
        - containerPort: 4001
