Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alicesrabbit-client-deploy
  labels:
    app: alicesrabbit-client
  namespace: alicesrabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alicesrabbit-client
  template:
    metadata:
      labels:
        app: alicesrabbit-client
    spec:
      hostAliases:
        - ip: "162.19.66.30"
          hostnames:
            - "alicesrabbit.eu"
      containers:
      - name: alicesrabbit-client
        image: 162.19.66.30:7000/alicesrabbit_client:kube-lts
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: alicesrabbit-server-deploy
  labels:
    app: alicesrabbit-server
  namespace: alicesrabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alicesrabbit-server
  template:
    metadata:
      labels:
        app: alicesrabbit-server
    spec:
      containers:
      - name: alicesrabbit-server
        image: 162.19.66.30:7000/alicesrabbit_server:kube-lts
        ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alicesrabbit-postgres
  labels:
    app: alicesrabbit-postgres
  namespace: alicesrabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alicesrabbit-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alicesrabbit-postgres
    spec:
      containers:
      - name: alicesrabbit-postgres
        image: postgres:14.5
        ports:
          - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/postgresql/alicesrabbit/data"
          name: alicesrabbit-pv
      volumes:
        - name: alicesrabbit-pv
          persistentVolumeClaim:
            claimName: alicesrabbit-pvc
