Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: alicesrabbit-server-service
  labels:
    app: alicesrabbit-server-service
  namespace: alicesrabbit
spec:
  type: LoadBalancer
  selector:
    app: alicesrabbit-server
  ports:
    - name: http-back
      port: 4000
      targetPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: alicesrabbit-client-service
  labels:
    app: alicesrabbit-client-service
  namespace: alicesrabbit
spec:
  selector:
      app: alicesrabbit-client
  ports:
    - name: http-client
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: alicesrabbit-postgres-service
  labels:
    app: alicesrabbit-postgres-service
  namespace: alicesrabbit
spec:
  selector:
    app: alicesrabbit-postgres
  ports:
    - port: 5432
      targetPort: 5432
